dnl Process this file with autoconf to produce a configure script.
AC_INIT(nfa2dfa.cc)
AM_INIT_AUTOMAKE(nfa2dfa, 0.1)
AM_CONFIG_HEADER([config.h])
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LEX
AC_PROG_YACC
AC_CHECK_HEADER(popt.h,,[AC_MSG_ERROR([popt.h not found])])
AC_CHECK_LIB(popt,poptGetContext,,[AC_MSG_ERROR([libpopt not found])])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
