dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT
AC_CONFIG_SRCDIR([nfa2dfa.cc])
AM_INIT_AUTOMAKE(nfa2dfa, 0.1)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LEX
AC_PROG_YACC
AC_CHECK_HEADER(popt.h,,[AC_MSG_ERROR([popt.h not found])])
AC_CHECK_LIB(popt,poptGetContext,,[AC_MSG_ERROR([libpopt not found])])
AX_SELECT1ST
dnl libtool
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
